--- a/src/components/instructions/style.scss
+++ b/src/components/instructions/style.scss
@@ -1,16 +1,15 @@
-
 .instructionshidden {
     z-index: 5;
     position: fixed;
     top: 71%;
     left: 30px;
     color: white;
-    background: rgba(27,29,33,0.75);
+    background: rgba(27, 29, 33, 0.75);
     border-radius: 15px 15px 15px 15px;
     padding: 15px 15px 15px 15px;
     cursor: pointer;
-    font-family: "Basier";
-    font-size: .8em;
+    font-family: 'Basier';
+    font-size: 0.8em;
 }
 
 .instructionscontainer {
@@ -20,14 +19,14 @@
     left: 30px;
     display: flex;
     flex-direction: column;
-    background: rgba(27,29,33,0.75);
+    background: rgba(27, 29, 33, 0.75);
     border-radius: 15px 15px 15px 15px;
     padding: 10px 10px 10px 10px;
     color: white;
     flex-wrap: wrap;
     width: 310px;
-    font-family: "Basier";
-    font-size: .9em;
+    font-family: 'Basier';
+    font-size: 0.9em;
 
     span {
         margin-left: 270px;
@@ -36,7 +35,7 @@
 
     .instructionsheader {
         text-align: center;
-        padding: 9px 0px 5px 0px!important;
+        padding: 9px 0px 5px 0px !important;
         text-decoration: underline;
         h1 {
             text-align: center;
@@ -45,6 +44,6 @@
 
     .instructionsstep {
         padding: 8px 0px 8px 7px;
-        font-size: .8em;
+        font-size: 0.8em;
     }
 }
