--- a/src/components/notification/style.scss
+++ b/src/components/notification/style.scss
@@ -2,14 +2,14 @@
     text-align: right;
     margin-top: 15px;
     span {
-        background: rgba(27,29,33,0.75);
+        background: rgba(27, 29, 33, 0.75);
         border-radius: 5px 5px 5px 5px;
         padding: 5px 15px 5px 15px;
-        font-family: "Basier";
-        color: rgba(217, 81, 72, .9);
-        border: 1px solid rgba(217, 81, 72, .9);
+        font-family: 'Basier';
+        color: rgba(217, 81, 72, 0.9);
+        border: 1px solid rgba(217, 81, 72, 0.9);
         text-align: center;
-        font-size: .9em;
+        font-size: 0.9em;
         line-height: 1.4em;
         opacity: 1;
     }
@@ -20,14 +20,14 @@
     margin-top: 15px;
 
     span {
-        background: rgba(27,29,33,0.75);
+        background: rgba(27, 29, 33, 0.75);
         border-radius: 5px 5px 5px 5px;
         padding: 5px 15px 5px 15px;
-        font-family: "Basier";
-        color: rgba(217, 81, 72, .9);
-        border: 1px solid rgba(217, 81, 72, .9);
+        font-family: 'Basier';
+        color: rgba(217, 81, 72, 0.9);
+        border: 1px solid rgba(217, 81, 72, 0.9);
         text-align: center;
-        font-size: .9em;
+        font-size: 0.9em;
         line-height: 1.4em;
         opacity: 1;
     }
@@ -38,14 +38,14 @@
     margin-top: 15px;
 
     span {
-        background: rgba(27,29,33,0.75);
+        background: rgba(27, 29, 33, 0.75);
         border-radius: 5px 5px 5px 5px;
         padding: 5px 15px 5px 15px;
-        font-family: "Basier";
-        color: rgba(217, 81, 72, .9);
-        border: 1px solid rgba(217, 81, 72, .9);
+        font-family: 'Basier';
+        color: rgba(217, 81, 72, 0.9);
+        border: 1px solid rgba(217, 81, 72, 0.9);
         text-align: center;
-        font-size: .9em;
+        font-size: 0.9em;
         line-height: 1.4em;
         opacity: 1;
     }
@@ -56,14 +56,14 @@
     margin-top: 15px;
 
     span {
-        background: rgba(27,29,33,0.75);
+        background: rgba(27, 29, 33, 0.75);
         border-radius: 5px 5px 5px 5px;
         padding: 5px 15px 5px 15px;
-        font-family: "Basier";
-        color: rgba(217, 81, 72, .9);
-        border: 1px solid rgba(217, 81, 72, .9);
+        font-family: 'Basier';
+        color: rgba(217, 81, 72, 0.9);
+        border: 1px solid rgba(217, 81, 72, 0.9);
         text-align: center;
-        font-size: .9em;
+        font-size: 0.9em;
         line-height: 1.4em;
         opacity: 1;
     }
@@ -74,16 +74,16 @@
     margin-top: 15px;
 
     span {
-        background: rgba(27,29,33,0.75);
+        background: rgba(27, 29, 33, 0.75);
         border-radius: 5px 5px 5px 5px;
         padding: 5px 15px 5px 15px;
-        font-family: "Basier";
-        color: rgba(217, 81, 72, .9);
-        border: 1px solid rgba(217, 81, 72, .9);
+        font-family: 'Basier';
+        color: rgba(217, 81, 72, 0.9);
+        border: 1px solid rgba(217, 81, 72, 0.9);
         text-align: left;
         word-wrap: normal;
         display: inline-block;
-        font-size: .9em;
+        font-size: 0.9em;
         width: 392px;
         line-height: 1.4em;
         opacity: 1;
