--- a/src/containers/EarthContainer/style.scss
+++ b/src/containers/EarthContainer/style.scss
@@ -13,8 +13,8 @@
         left: 50px;
         z-index: 5;
         font-size: 1.7em;
-        font-family:  "Garet-heavy";
-        letter-spacing: .1rem;
+        font-family: 'Garet-heavy';
+        letter-spacing: 0.1rem;
     }
 
     span {
@@ -26,7 +26,7 @@
             color: white;
             font-family: 'Basier';
             margin-left: 5px;
-            font-size: .9em;
+            font-size: 0.9em;
         }
     }
 }
