--- a/src/components/credits/style.scss
+++ b/src/components/credits/style.scss
@@ -5,21 +5,20 @@
     right: 20px;
     display: flex;
     color: white;
-    opacity: .25;
-    font-size: .65em;
+    opacity: 0.25;
+    font-size: 0.65em;
     font-family: 'Basier';
 
     a {
         border-bottom: 1px solid;
     }
-    
+
     span {
         margin: 0px 5px 0px 5px;
     }
 
     .creditsemoji {
-        font-size: .9em;
+        font-size: 0.9em;
         padding-top: 2px;
     }
-
 }
