--- a/src/containers/SearchContainer/Dropdown/style.scss
+++ b/src/containers/SearchContainer/Dropdown/style.scss
@@ -3,13 +3,13 @@
         border-radius: 5px 0px 0px 5px;
         cursor: pointer;
         pointer-events: none;
-        background-color: rgba(198,198,197,0.84);
-        color: rgb(27,29,33);
-        font-family: "Basier";
+        background-color: rgba(198, 198, 197, 0.84);
+        color: rgb(27, 29, 33);
+        font-family: 'Basier';
 
         &:hover {
             background: #737373;
-            color: rgba(27,29,33, 0.90);
+            color: rgba(27, 29, 33, 0.9);
         }
 
         #emojidownarrow {
@@ -17,7 +17,7 @@
             left: 56px;
             bottom: 31px;
             height: 0px;
-            font-size: .7em;
+            font-size: 0.7em;
             pointer-events: auto;
         }
 
@@ -28,8 +28,8 @@
             height: 50px;
             font-size: 1.4em;
             border-radius: 5px 0px 0px 5px;
-            color:inherit;
-            background:inherit;
+            color: inherit;
+            background: inherit;
             padding-right: 15px;
             border: none;
             cursor: pointer;
