--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -1,11 +1,17 @@
 $breakpoints: (
-    'xsmall'      : 0px,    // mobile-m max=375px
-    'small'       : 376px,  // mobile-l max=425px
-    'medium'      : 426px,  // tablet max=768px
-    'large'       : 769px,  // laptop-m max=1024px => ipad pro falls under this
-    'xlarge'      : 1025px, // laptop-l max=1440px
-    'xxlarge'     : 1440px, // 4k max=2560px
-    'xxxlarge'    : 2560px
+    'xsmall': 0px,
+    // mobile-m max=375px
+    'small': 376px,
+    // mobile-l max=425px
+    'medium': 426px,
+    // tablet max=768px
+    'large': 769px,
+    // laptop-m max=1024px => ipad pro falls under this
+    'xlarge': 1025px,
+    // laptop-l max=1440px
+    'xxlarge': 1440px,
+    // 4k max=2560px
+    'xxxlarge': 2560px,
 );
 
 @mixin breakpoint-all {
@@ -20,7 +26,7 @@ $breakpoints: (
     $min-value: map-get($breakpoints, small);
     $max-value: map-get($breakpoints, medium) - 1;
 
-    @media (min-width: $min-value) and (max-width: $max-value){
+    @media (min-width: $min-value) and (max-width: $max-value) {
         @content;
     }
 }
@@ -28,7 +34,7 @@ $breakpoints: (
 @mixin breakpoint-small-down {
     $max-value: map-get($breakpoints, medium) - 1;
 
-    @media (max-width: $max-value){
+    @media (max-width: $max-value) {
         @content;
     }
 }
@@ -36,7 +42,7 @@ $breakpoints: (
 @mixin breakpoint-small-up {
     $min-value: map-get($breakpoints, small);
 
-    @media (min-width: $min-value){
+    @media (min-width: $min-value) {
         @content;
     }
 }
@@ -45,7 +51,7 @@ $breakpoints: (
     $min-value: map-get($breakpoints, medium);
     $max-value: map-get($breakpoints, large) - 1;
 
-    @media (min-width: $min-value) and (max-width: $max-value){
+    @media (min-width: $min-value) and (max-width: $max-value) {
         @content;
     }
 }
@@ -53,24 +59,24 @@ $breakpoints: (
 @mixin breakpoint-medium-down {
     $max-value: map-get($breakpoints, large) - 1;
 
-    @media (max-width: $max-value){
+    @media (max-width: $max-value) {
         @content;
     }
 }
 
 @mixin breakpoint-medium-up {
-  $min-value: map-get($breakpoints, medium);
+    $min-value: map-get($breakpoints, medium);
 
-  @media (min-width: $min-value){
-    @content;
-  }
+    @media (min-width: $min-value) {
+        @content;
+    }
 }
 
 @mixin breakpoint-large-only {
     $min-value: map-get($breakpoints, large);
     $max-value: map-get($breakpoints, xlarge) - 1;
 
-    @media (min-width: $min-value) and (max-width: $max-value){
+    @media (min-width: $min-value) and (max-width: $max-value) {
         @content;
     }
 }
@@ -78,7 +84,7 @@ $breakpoints: (
 @mixin breakpoint-large-down {
     $max-value: map-get($breakpoints, xlarge) - 1;
 
-    @media (max-width: $max-value), (max-height: 620px){
+    @media (max-width: $max-value), (max-height: 620px) {
         @content;
     }
 }
@@ -86,7 +92,7 @@ $breakpoints: (
 @mixin breakpoint-large-up {
     $min-value: map-get($breakpoints, large);
 
-    @media (min-width: $min-value){
+    @media (min-width: $min-value) {
         @content;
     }
 }
@@ -95,7 +101,7 @@ $breakpoints: (
     $min-value: map-get($breakpoints, xlarge);
     $max-value: map-get($breakpoints, xxlarge) - 1;
 
-    @media (min-width: $min-value) and (max-width: $max-value){
+    @media (min-width: $min-value) and (max-width: $max-value) {
         @content;
     }
 }
@@ -103,7 +109,7 @@ $breakpoints: (
 @mixin breakpoint-xlarge-down {
     $max-value: map-get($breakpoints, xxlarge) - 1;
 
-    @media (max-width: $max-value){
+    @media (max-width: $max-value) {
         @content;
     }
 }
@@ -111,7 +117,7 @@ $breakpoints: (
 @mixin breakpoint-xlarge-up {
     $min-value: map-get($breakpoints, xlarge);
 
-    @media (min-width: $min-value){
+    @media (min-width: $min-value) {
         @content;
     }
 }
@@ -120,7 +126,7 @@ $breakpoints: (
     $min-value: map-get($breakpoints, xxlarge);
     $max-value: map-get($breakpoints, xxxlarge) - 1;
 
-    @media (min-width: $min-value) and (max-width: $max-value){
+    @media (min-width: $min-value) and (max-width: $max-value) {
         @content;
     }
 }
@@ -128,7 +134,7 @@ $breakpoints: (
 @mixin breakpoint-xxlarge-down {
     $max-value: map-get($breakpoints, xxxlarge) - 1;
 
-    @media (max-width: $max-value){
+    @media (max-width: $max-value) {
         @content;
     }
 }
@@ -136,7 +142,7 @@ $breakpoints: (
 @mixin breakpoint-xxlarge-up {
     $min-value: map-get($breakpoints, xxlarge);
 
-    @media (min-width: $min-value) , (min-height: 700px){
+    @media (min-width: $min-value), (min-height: 700px) {
         @content;
     }
 }
