--- a/src/components/splashpage/style.scss
+++ b/src/components/splashpage/style.scss
@@ -53,7 +53,7 @@
         z-index: 8;
         opacity: 0;
         color: #dedede;
-        text-shadow: 2px 2px 3px black;
+        text-shadow: 2px 2px 2px black;
         font-family: 'Basier';
         position: fixed;
         bottom: 40px;
@@ -75,25 +75,21 @@
     }
 
     h2 {
-        color: #dedede;
+        color: #d9d9d9;
+        text-shadow: 2px 2px 2px black;
         font-size: 1em;
         font-family: 'Basier';
         position: fixed;
-        top: 6%;
+        bottom: 5%;
         right: 4%;
         z-index: 8;
         opacity: 0;
-
-        background: rgba(27, 29, 33, 0.75);
-        border-radius: 10px 10px 10px 10px;
-        padding: 10px 15px 10px 15px;
-
         animation-name: fadein, blink;
         animation-iteration-count: 1, infinite;
         animation-direction: normal, alternate;
         animation-delay: 2.2s, 3.7s;
         animation-duration: 1.5s, 2s;
-        animation-timing-function: linear, ease-in-out;
+        animation-timing-function: linear, linear;
         animation-fill-mode: forwards;
     }
 
