--- a/src/components/splashpage/style.scss
+++ b/src/components/splashpage/style.scss
@@ -2,6 +2,7 @@
 
 #splashwrapper {
     z-index: 6;
+    cursor: pointer;
 
     @keyframes fadein {
         from {
@@ -14,6 +15,7 @@
 
     h1 {
         color: #dedede;
+        text-shadow: 2px 2px 1px black;
         font-size: 2em;
         position: fixed;
         top: 50px;
@@ -29,18 +31,15 @@
     p {
         color: #dedede;
         font-size: 1em;
-        line-height: 125%;
+        line-height: 122%;
         width: 475px;
         font-family: 'Basier';
         position: fixed;
-        top: 125px;
+        top: 110px;
         left: 50px;
         z-index: 8;
         opacity: 0;
-        // text-shadow: 2px 2px 3px #4287f5;
-        background: rgba(27, 29, 33, 0.75);
-        border-radius: 10px 10px 10px 10px;
-        padding: 10px 15px 10px 15px;
+        text-shadow: 2px 2px 1px black;
         animation-name: fadein;
         animation-delay: 1.2s;
         animation-duration: 1.5s;
@@ -94,25 +93,25 @@
     }
 
     #splashimagewrapper {
-        @keyframes slideup {
-            from {
-                top: 0%;
-            }
+        // @keyframes slideup {
+        //     from {
+        //         top: 0%;
+        //     }
 
-            to {
-                top: -110%;
-            }
-        }
+        //     to {
+        //         top: -110%;
+        //     }
+        // }
 
-        @keyframes slideup-large-only {
-            from {
-                top: 0%;
-            }
+        // @keyframes slideup-large-only {
+        //     from {
+        //         top: 0%;
+        //     }
 
-            to {
-                top: -110%;
-            }
-        }
+        //     to {
+        //         top: -110%;
+        //     }
+        // }
 
         @keyframes slideup-xlarge-only {
             from {
@@ -124,20 +123,31 @@
             }
         }
 
-        @keyframes slideup-xxlarge-up {
-            from {
-                top: 0%;
-            }
+        // @keyframes slideup-heightgap-only {
+        //     from {
+        //         top: 0%;
+        //     }
 
-            to {
-                top: -110%;
-            }
-        }
+        //     to {
+        //         top: -158%;
+        //     }
+        // }
+
+        // @keyframes slideup-xxlarge-up {
+        //     from {
+        //         top: 0%;
+        //     }
+
+        //     to {
+        //         top: -110%;
+        //     }
+        // }
 
         img {
             //z-index: 7;
             position: fixed;
-            left: -650px;
+            //left: -650px;
+            left: -850px;
             transform: scale(0.75);
 
             //defaults set for large only
@@ -147,15 +157,34 @@
             animation-fill-mode: forwards;
 
             @include breakpoint-large-down {
-                transform: scale(0.8) translate(-3%, -2%);
+                transform: scale(0.7) translate(-15%, -2%);
             }
 
-            @include breakpoint-xlarge-only {
+            @include breakpoint-xlarge-only-tall {
+                left: -870px;
+                transform: scale(0.8) translate(2%, 19%);
+            }
+
+            @include breakpoint-xlarge-only-medium {
+                left: -860px;
+                transform: scale(0.8) translate(3%, 13%);
+            }
+
+            @include breakpoint-xlarge-only-short {
                 left: -850px;
+                transform: scale(0.8) translate(3%, 8%);
             }
 
-            @include breakpoint-xxlarge-up {
-                transform: translate(5%, 16%);
+            @include breakpoint-xxlarge-up-tall {
+                transform: translate(9%, 17%);
+            }
+
+            @include breakpoint-xxlarge-up-medium {
+                transform: translate(7%, 12%);
+            }
+
+            @include breakpoint-xxlarge-up-short {
+                transform: translate(6%, 8%);
             }
         }
     }
