feat: extend support for international users
* feat: add endpoint to provide city from zipcode

* feat: disable button while searching for results

* chore: update browserlist

--- a/src/components/search/style.scss
+++ b/src/components/search/style.scss
@@ -20,6 +20,10 @@
                 background: #737373;
                 color: black;
             }
+            &:disabled {
+                background: #737373;
+                color: black;
+            }
         }
         #zipinput {
             width: 172px;
