build: update OS and Node.js version
* chore: enable npm workspace

* chore: update configs and scripts

* deps: bump all dependencies to latest

* test(github): update workflow config

--- a/web/src/assets/fonts/fonts.css
+++ b/web/src/assets/fonts/fonts.css
@@ -3,8 +3,7 @@
     font-weight: 400;
     font-style: normal;
     font-display: swap;
-    src: local('Basier Circular Regular'),
-        url('./basier-circle/basiercircle-regular-webfont.woff') format('woff');
+    src: local('Basier Circular Regular'), url('./basier-circle/basiercircle-regular-webfont.woff') format('woff');
 }
 
 @font-face {
